style.css
/* ... */
    .comment-navigation .nav-previous span,
    .posts-navigation .nav-previous span,
    .post-navigation .nav-previous span {
      font-family: Verdana, Geneva, sans-serif;
      margin-right: .2em; }
  .comment-navigation .nav-next,
  .posts-navigation .nav-next,
  .post-navigation .nav-next {
    float: right;
    padding: 1em 0;
    text-align: right;
    width: 50%; }
    .comment-navigation .nav-next span,
    .posts-navigation .nav-next span,
    .post-navigation .nav-next span {
      font-family: Verdana, Geneva, sans-serif;
      margin-left: .2em; }
  .comment-navigation a,
  .posts-navigation a,
  .post-navigation a {
    border: 2px solid #ebebeb;
    color: #626262;
    padding: 1em 1.923em;
    text-decoration: none;
    text-transform: uppercase; }
    .comment-navigation a:hover,
    .posts-navigation a:hover,
    .post-navigation a:hover {
      border-color: #24c48a;
      color: #24c48a; }

.posts-navigation .nav-links,
.comment-navigation .nav-links {
  font-size: 13.8656px;
  font-size: 0.8666rem;
  font-family: "Lato", sans-serif !important;
  letter-spacing: .1em; }
  .posts-navigation .nav-links .nav-previous span,
  .comment-navigation .nav-links .nav-previous span {
    margin-right: .5em; }
  .posts-navigation .nav-links .nav-next span,
  .comment-navigation .nav-links .nav-next span {
    margin-left: .5em; }

.pagination {
  margin: 0 0 4.6666em;
  text-align: center; }
  .pagination .page-numbers {
    background: #fff;
    border: 1px solid #ebebeb;
    color: #626262;
    font-size: 13px;
    margin-right: 1px;
    padding: 9px 11px 8px; }
    .pagination .page-numbers:hover {
      background: #24c48a;
      border-color: #24c48a;
      color: #fff; }
  .pagination .dots {
    background: none;
    border: 0;
    font-size: 13px;
    padding-right: 0;
    padding-left: 0; }
    .pagination .dots:hover {
      background: none;
      color: #626262; }
  .pagination .current {
    background: #24c48a;
    border-color: #24c48a;
    color: #fff; }
  .pagination .next,
  .pagination .prev {
    font-family: "Lato", sans-serif;
    padding: 9px 9px 8px; }

#comment-nav-above {
  padding-top: 35px; }

#comment-nav-below {
  padding-top: 25px; }

.post-navigation {
  border-top: 2px solid #ebebeb;
  border-bottom: 2px solid #ebebeb;
  font-family: "Merriweather", serif;
  font-size: 17.0656px;
  font-size: 1.0666rem;
  font-weight: 600;
  padding: 4em 0; }
  .post-navigation a {
    border: none;
    color: #626262;
    font-weight: 600;
    padding: 0;
    text-decoration: none;
    text-transform: none; }
    .post-navigation a:hover {
      color: #24c48a; }
    .post-navigation a .sub-title {
      border-bottom: 2px solid #ebebeb;
      color: #adadad;
      display: inline-block;
      font-family: "Lato", sans-serif;
      font-size: 13.8656px;
      font-size: 0.8666rem;
      font-weight: normal;
      text-transform: uppercase;
      letter-spacing: 1px;
      line-height: normal;
      margin-bottom: 1.1em;
      padding-bottom: .2em; }
    .post-navigation a div {
      line-height: normal; }

/*--------------------------------------------------------------
## Breadcrumbs
--------------------------------------------------------------*/
.breadcrumbs,
.woocommerce .woocommerce-breadcrumb {
  color: #adadad;
  font-family: "Lato", sans-serif;
  font-size: 12px;
  line-height: normal;
  margin-bottom: 24px;
  text-transform: uppercase; }
  .breadcrumbs a,
  .woocommerce .woocommerce-breadcrumb a {
    color: #2d2d2d; }
    .breadcrumbs a:hover,
    .woocommerce .woocommerce-breadcrumb a:hover {
      color: #24c48a; }
  .breadcrumbs a,
  .breadcrumbs span,
  .woocommerce .woocommerce-breadcrumb a,
  .woocommerce .woocommerce-breadcrumb span {
    padding: 0 4px; }
  .breadcrumbs .breadcrumb_last,
  .woocommerce .woocommerce-breadcrumb .breadcrumb_last {
    color: #adadad; }

.woocommerce .woocommerce-breadcrumb {
  margin-bottom: 35px; }

.breadcrumbs.bcn a,
.breadcrumbs.bcn span {
  padding: 0; }

.breadcrumbs.bcn span {
  padding: 0 2px; }

/*--------------------------------------------------------------
## Scroll to Top
--------------------------------------------------------------*/
#scroll-to-top {
  background: rgba(0, 0, 0, 0.4);
  bottom: 20px;
  cursor: pointer;
  height: 44px;
  line-height: 0;
  opacity: 0;
  padding-top: 17px;
  position: fixed;
  right: 20px;
  transform: scale(0);
  transition: .3s;
  text-align: center;
  width: 50px;
  z-index: 101; }
  #scroll-to-top svg path {
    fill: #fff; }
  #scroll-to-top img,
  #scroll-to-top svg {
    display: inline-block;
    height: 11px;
    width: 18px; }
  #scroll-to-top:hover {
    background: rgba(0, 0, 0, 0.65); }
  #scroll-to-top.show {
    opacity: 1;
    transform: scale(1); }

/*--------------------------------------------------------------
# Accessibility
--------------------------------------------------------------*/
/* Text meant only for screen readers. */
.screen-reader-text {
  clip: rect(1px, 1px, 1px, 1px);
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden; }
  .screen-reader-text:focus {
    background-color: #f1f1f1;
    border-radius: 3px;
    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
    clip: auto !important;
    color: #21759b;
    display: block;
    font-size: 14px;
    font-size: 0.875rem;
    font-weight: bold;
    height: auto;
    left: 5px;
    line-height: normal;
    padding: 15px 23px 14px;
    text-decoration: none;
    top: 5px;
    width: auto;
    z-index: 100000; }

#content[tabindex="-1"]:focus {
  outline: 0; }

/*--------------------------------------------------------------
# Alignments
--------------------------------------------------------------*/
.alignleft {
  display: inline;
  float: left;
  margin-right: 1.9833em; }

.alignright {
  display: inline;
  float: right;
  margin-left: 1.9833em; }
/* ... */

